2006-12-04 [paul]	0.5.7

	0.5.7 released

2006-11-28 [paul]	0.5.6cvs3

	* configure.ac
		bump required version of Claws
		following renaming
		Thanks to Charles Edwards for the
		reminder

2006-11-27 [paul]	0.5.6cvs2

	* src/Makefile.am
	* src/plugin.c
		renaming

2006-11-07 [paul]	0.5.6cvs1

	* ChangeLog
	* INSTALL
	* configure.ac
	* src/Makefile.am
	* src/plugin.c
	* src/smime.c
	* src/smime.h
		Name change

2006-11-07 [paul]	0.5.6

	0.5.6 released

2006-10-05 [paul]	0.5.5cvs2

	* src/Makefile.am
		remove reference to non-existan file, causing
		build failure

2006-10-04 [paul]	0.5.5cvs1

	* src/Makefile.am
		fix bug 1027, 'plugin smime not possible to load'
		Thanks to Colin

2006-09-25 [paul]	0.5.5

	0.5.5 released

2006-09-22 [ticho]	0.5.4cvs4

	* configure.ac
		Update required claws-mail version to 2.4.0.200.

2006-09-01 [wwp]	0.5.4cvs3

	* commitHelper
		sync w/ commitHelper in claws-mail module:
		use CVSEDITOR env. var. if set.

2006-08-27 [colin]	0.5.4cvs2

	* src/smime.c
		Implement plugin_provides()

2006-08-18 [paul]	0.5.4cvs1

	* configure.ac
		bump up GLib and GTK+ minimum required versions,
		following Claws

2006-06-12 [paul]	0.5.4

	0.5.4 released

2006-06-09 [wwp]	0.5.3cvs3

	* src/Makefile.am
		fixed accidentally removed EXTRA_DIST entry (my bad).

2006-06-06 [wwp]	0.5.3cvs2

	* configure.ac
	* src/.cvsignore
	* src/Makefile.am
	* src/plugin.c
	* src/plugin_version.h.in
		fix/unify/simplify autostuff, get rid of src/plugin_version.h{,.in} (use pluginconfig.h instead).

2006-06-03 [wwp]	0.5.3cvs1

	* commitHelper
	* PATCHSETS
		introducing commitHelper for plugins too.

2006-06-03 [colin] 	0.5.3

	* src/smime.c
		Make sure we have content before using it

2006-04-07 [colin] 	0.5.2

	* src/smime.c
		Fix handling of pkcs7-mime (signed-data)
		signatures

2006-04-07 [colin] 	0.5.1

	* configure.ac
		Optionnaly handle --prefix.
		Patch by Pawel Pekala.

2006-04-05 [colin]	0.5

	* First release