@@ -1,3 +1,9 @@
+2006-12-15 [ticho]	0.5.7cvs1
+
+	* configure.ac
+	* src/plugin.c
+		Use check_plugin_version() for version check.
+
 2006-12-04 [paul]	0.5.7
 
 	0.5.7 released
